Make good progress before spreading linForecasts

--- a/1-Get-Historic-Data-and-Previous-Forecasts.ipynb
+++ b/1-Get-Historic-Data-and-Previous-Forecasts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "[75375 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "[8111 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "[4573 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
        "[4573 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
        "[4746 rows x 44 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1883,7 @@
        "[84551 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1939,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1973,37 +1973,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0006_146.9</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>1517</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>975</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0006_149.9</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>2441</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <th>3912</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0006_150.6</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>2441</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <th>7824</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>965</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0006_152.6</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>2417</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <th>11736</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>1240</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0006_152.9</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>3759</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <th>15648</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2013,39 +2013,39 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>160387</th>\n",
-       "      <td>3465_000.0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>493</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <th>21615</th>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>13770</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>160388</th>\n",
-       "      <td>3466_000.0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>7681</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <th>17259</th>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>14498</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>160389</th>\n",
-       "      <td>3466_000.1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>7681</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <th>12903</th>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>6489</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>160390</th>\n",
-       "      <td>3466_000.3</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>7681</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <th>8547</th>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>6554</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>160391</th>\n",
-       "      <td>3470_000.0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1669</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <th>4191</th>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>6672</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2053,54 +2053,55 @@
        "</div>"
       ],
       "text/plain": [
-       "             SEGID  YEAR  AADT                        SOURCE\n",
-       "0       0006_146.9  2019  1517  Segments_WF - 2023-08-01.shp\n",
-       "1       0006_149.9  2019  2441  Segments_WF - 2023-08-01.shp\n",
-       "2       0006_150.6  2019  2441  Segments_WF - 2023-08-01.shp\n",
-       "3       0006_152.6  2019  2417  Segments_WF - 2023-08-01.shp\n",
-       "4       0006_152.9  2019  3759  Segments_WF - 2023-08-01.shp\n",
-       "...            ...   ...   ...                           ...\n",
-       "160387  3465_000.0  2021   493              AADTHistory.xlsx\n",
-       "160388  3466_000.0  2021  7681              AADTHistory.xlsx\n",
-       "160389  3466_000.1  2021  7681              AADTHistory.xlsx\n",
-       "160390  3466_000.3  2021  7681              AADTHistory.xlsx\n",
-       "160391  3470_000.0  2021  1669              AADTHistory.xlsx\n",
+       "            SEGID  YEAR   AADT                        SOURCE\n",
+       "0      0006_146.9  1981    975              AADTHistory.xlsx\n",
+       "3912   0006_146.9  1982   1000              AADTHistory.xlsx\n",
+       "7824   0006_146.9  1983    965              AADTHistory.xlsx\n",
+       "11736  0006_146.9  1984   1240              AADTHistory.xlsx\n",
+       "15648  0006_146.9  1985   1340              AADTHistory.xlsx\n",
+       "...           ...   ...    ...                           ...\n",
+       "21615   WFRC_8263  2015  13770  Segments_WF - 2023-08-01.shp\n",
+       "17259   WFRC_8263  2016  14498  Segments_WF - 2023-08-01.shp\n",
+       "12903   WFRC_8263  2017   6489  Segments_WF - 2023-08-01.shp\n",
+       "8547    WFRC_8263  2018   6554  Segments_WF - 2023-08-01.shp\n",
+       "4191    WFRC_8263  2019   6672  Segments_WF - 2023-08-01.shp\n",
        "\n",
        "[159926 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dfAadt = pd.concat([dfAadtFromSegments,dfAadtFromHistoric])\n",
+    "dfAadt = dfAadt.sort_values(by=['SEGID','SOURCE','YEAR'])\n",
     "dfAadt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3743      MAG_6017\n",
+       "12455     MAG_6017\n",
        "3887      MAG_6164\n",
-       "4187      MAG_6254\n",
-       "4189     WFRC_8262\n",
-       "4190     WFRC_8004\n",
-       "4191     WFRC_8263\n",
-       "12894    WFRC_8220\n",
+       "12899     MAG_6254\n",
+       "43394    WFRC_8004\n",
+       "73878    WFRC_8220\n",
        "25973    WFRC_8221\n",
        "25974    WFRC_8222\n",
        "25975    WFRC_8223\n",
+       "43393    WFRC_8262\n",
+       "43395    WFRC_8263\n",
        "Name: SEGID, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2112,10 +2113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "dfAadt.rename(columns={'AADT':'obsAADT'})\n",
+    "\n",
     "# export AADT\n",
     "dfAadt.to_csv('intermediate/aadt.csv',index=False)\n",
     "\n",
