--- a/2-Prepare-Linear-Forecasts.ipynb
+++ b/2-Prepare-Linear-Forecasts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,37 +169,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0006_146.9</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>1517</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>975</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0006_149.9</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>2441</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0006_150.6</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>2441</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>965</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0006_152.6</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>2417</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>1240</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0006_152.9</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>3759</td>\n",
-       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -210,38 +210,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>159921</th>\n",
-       "      <td>3465_000.0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>493</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>13770</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>159922</th>\n",
-       "      <td>3466_000.0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>7681</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>14498</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>159923</th>\n",
-       "      <td>3466_000.1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>7681</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>6489</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>159924</th>\n",
-       "      <td>3466_000.3</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>7681</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>6554</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>159925</th>\n",
-       "      <td>3470_000.0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1669</td>\n",
-       "      <td>AADTHistory.xlsx</td>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>6672</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -249,23 +249,23 @@
        "</div>"
       ],
       "text/plain": [
-       "             SEGID  YEAR  AADT                        SOURCE\n",
-       "0       0006_146.9  2019  1517  Segments_WF - 2023-08-01.shp\n",
-       "1       0006_149.9  2019  2441  Segments_WF - 2023-08-01.shp\n",
-       "2       0006_150.6  2019  2441  Segments_WF - 2023-08-01.shp\n",
-       "3       0006_152.6  2019  2417  Segments_WF - 2023-08-01.shp\n",
-       "4       0006_152.9  2019  3759  Segments_WF - 2023-08-01.shp\n",
-       "...            ...   ...   ...                           ...\n",
-       "159921  3465_000.0  2021   493              AADTHistory.xlsx\n",
-       "159922  3466_000.0  2021  7681              AADTHistory.xlsx\n",
-       "159923  3466_000.1  2021  7681              AADTHistory.xlsx\n",
-       "159924  3466_000.3  2021  7681              AADTHistory.xlsx\n",
-       "159925  3470_000.0  2021  1669              AADTHistory.xlsx\n",
+       "             SEGID  YEAR   AADT                        SOURCE\n",
+       "0       0006_146.9  1981    975              AADTHistory.xlsx\n",
+       "1       0006_146.9  1982   1000              AADTHistory.xlsx\n",
+       "2       0006_146.9  1983    965              AADTHistory.xlsx\n",
+       "3       0006_146.9  1984   1240              AADTHistory.xlsx\n",
+       "4       0006_146.9  1985   1340              AADTHistory.xlsx\n",
+       "...            ...   ...    ...                           ...\n",
+       "159921   WFRC_8263  2015  13770  Segments_WF - 2023-08-01.shp\n",
+       "159922   WFRC_8263  2016  14498  Segments_WF - 2023-08-01.shp\n",
+       "159923   WFRC_8263  2017   6489  Segments_WF - 2023-08-01.shp\n",
+       "159924   WFRC_8263  2018   6554  Segments_WF - 2023-08-01.shp\n",
+       "159925   WFRC_8263  2019   6672  Segments_WF - 2023-08-01.shp\n",
        "\n",
        "[159926 rows x 4 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "      <th></th>\n",
        "      <th>SEGID</th>\n",
        "      <th>SOURCE</th>\n",
-       "      <th>Projection Group</th>\n",
+       "      <th>PROJGRP</th>\n",
        "      <th>2000</th>\n",
        "      <th>2021</th>\n",
        "      <th>2023</th>\n",
@@ -476,7 +476,7 @@
        "</div>"
       ],
       "text/plain": [
-       "            SEGID                        SOURCE         Projection Group  \\\n",
+       "            SEGID                        SOURCE                  PROJGRP  \\\n",
        "0      0006_146.9              AADTHistory.xlsx            Last 10 Years   \n",
        "1      0006_146.9  Segments_WF - 2023-08-01.shp            Last 10 Years   \n",
        "2      0006_149.9              AADTHistory.xlsx            Last 10 Years   \n",
@@ -510,7 +510,7 @@
     }
    ],
    "source": [
-    "# Linear forecasts with assist from ChatGPT?\n",
+    "# Linear forecasts with assist from ChatGPT\n",
     "# https://chat.openai.com/share/d127492a-ad78-4f45-afd0-50e29069db1a\n",
     "\n",
     "# Initialize a list to store the individual result DataFrames\n",
@@ -552,7 +552,7 @@
     "            aadt = np.rint(aadt).astype(int)\n",
     "\n",
     "            # Create a dictionary to store results for this group\n",
-    "            result_dict = {'SEGID': segid, 'SOURCE': source, 'Projection Group': pgName}\n",
+    "            result_dict = {'SEGID': segid, 'SOURCE': source, 'PROJGRP': pgName}\n",
     "            result_dict.update({year: aadt for year, aadt in zip(historic_years + future_years, aadt)})\n",
     "\n",
     "            # Convert the dictionary to a DataFrame and add to the list\n",
@@ -568,12 +568,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# melt\n",
+    "forecast_results_melt = forecast_results.melt(id_vars=['SEGID','SOURCE','PROJGRP'],var_name=\"YEAR\", value_name=\"lin\")\n",
     "# export csv\n",
-    "forecast_results.to_csv('intermediate/linear-forecasts.csv')"
+    "forecast_results_melt.to_csv('intermediate/linear-forecasts.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEGID</th>\n",
+       "      <th>SOURCE</th>\n",
+       "      <th>PROJGRP</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>linForecast</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
+       "      <td>Last 10 Years</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>Last 10 Years</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0006_149.9</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
+       "      <td>Last 10 Years</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0006_149.9</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>Last 10 Years</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0006_150.6</td>\n",
+       "      <td>AADTHistory.xlsx</td>\n",
+       "      <td>Last 10 Years</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310417</th>\n",
+       "      <td>WFRC_8221</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>Since 2000 without 2020</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310418</th>\n",
+       "      <td>WFRC_8222</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>Since 2000 without 2020</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310419</th>\n",
+       "      <td>WFRC_8223</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>Since 2000 without 2020</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310420</th>\n",
+       "      <td>WFRC_8262</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>Since 2000 without 2020</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>2297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310421</th>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>Segments_WF - 2023-08-01.shp</td>\n",
+       "      <td>Since 2000 without 2020</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>2297</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>310422 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             SEGID                        SOURCE                  PROJGRP  \\\n",
+       "0       0006_146.9              AADTHistory.xlsx            Last 10 Years   \n",
+       "1       0006_146.9  Segments_WF - 2023-08-01.shp            Last 10 Years   \n",
+       "2       0006_149.9              AADTHistory.xlsx            Last 10 Years   \n",
+       "3       0006_149.9  Segments_WF - 2023-08-01.shp            Last 10 Years   \n",
+       "4       0006_150.6              AADTHistory.xlsx            Last 10 Years   \n",
+       "...            ...                           ...                      ...   \n",
+       "310417   WFRC_8221  Segments_WF - 2023-08-01.shp  Since 2000 without 2020   \n",
+       "310418   WFRC_8222  Segments_WF - 2023-08-01.shp  Since 2000 without 2020   \n",
+       "310419   WFRC_8223  Segments_WF - 2023-08-01.shp  Since 2000 without 2020   \n",
+       "310420   WFRC_8262  Segments_WF - 2023-08-01.shp  Since 2000 without 2020   \n",
+       "310421   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 without 2020   \n",
+       "\n",
+       "        YEAR  linForecast  \n",
+       "0       2000          686  \n",
+       "1       2000          904  \n",
+       "2       2000         1817  \n",
+       "3       2000         2141  \n",
+       "4       2000         1817  \n",
+       "...      ...          ...  \n",
+       "310417  2050            3  \n",
+       "310418  2050            3  \n",
+       "310419  2050            3  \n",
+       "310420  2050         2297  \n",
+       "310421  2050         2297  \n",
+       "\n",
+       "[310422 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forecast_results_melt"
    ]
   }
  ],
