--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -182,12 +182,12 @@
        "      <th>M2032</th>\n",
        "      <th>M2042</th>\n",
        "      <th>M2050</th>\n",
-       "      <th>M2019ADJ</th>\n",
-       "      <th>M2023ADJ</th>\n",
-       "      <th>M2028ADJ</th>\n",
-       "      <th>M2032ADJ</th>\n",
-       "      <th>M2042ADJ</th>\n",
-       "      <th>M2050ADJ</th>\n",
+       "      <th>MF2019</th>\n",
+       "      <th>MF2023</th>\n",
+       "      <th>MF2028</th>\n",
+       "      <th>MF2032</th>\n",
+       "      <th>MF2042</th>\n",
+       "      <th>MF2050</th>\n",
        "      <th>ADJ2023</th>\n",
        "      <th>ADJ2028</th>\n",
        "      <th>ADJ2032</th>\n",
@@ -468,54 +468,54 @@
        "3720   WFRC_8263     1.0924         2427.0  4245.0  5503.0  6511.0  6667.0   \n",
        "3721   WFRC_8266     0.0000            0.0     0.0     0.0     0.0     0.0   \n",
        "\n",
-       "YEAR   M2042   M2050  M2019ADJ  M2023ADJ  M2028ADJ  M2032ADJ  M2042ADJ  \\\n",
-       "0     2120.0  2409.0    1517.0    1653.0    1720.0    1874.0    2102.0   \n",
-       "1     2652.0  5357.0    2441.0    2655.0    2868.0    2931.0    3508.0   \n",
-       "2     2891.0  5598.0    2441.0    2646.0    2866.0    2938.0    3548.0   \n",
-       "3     3756.0  6225.0    2417.0    2600.0    2869.0    2961.0    3637.0   \n",
-       "4     5675.0  8072.0    3759.0    4106.0    4576.0    4867.0    5551.0   \n",
-       "...      ...     ...       ...       ...       ...       ...       ...   \n",
-       "3717     0.0     0.0       0.0       0.0       0.0       0.0       0.0   \n",
-       "3718     0.0     0.0       0.0       0.0       0.0       0.0       0.0   \n",
-       "3719     0.0     0.0       0.0       0.0       0.0       0.0       0.0   \n",
-       "3720  6888.0  7125.0    6672.0    7930.0    8938.0    9094.0    9315.0   \n",
-       "3721     0.0     0.0       0.0       0.0       0.0       0.0       0.0   \n",
+       "YEAR   M2042   M2050  MF2019  MF2023  MF2028  MF2032  MF2042  MF2050  ADJ2023  \\\n",
+       "0     2120.0  2409.0  1517.0  1653.0  1720.0  1874.0  2102.0  2391.0        0   \n",
+       "1     2652.0  5357.0  2441.0  2655.0  2868.0  2931.0  3508.0  6213.0        0   \n",
+       "2     2891.0  5598.0  2441.0  2646.0  2866.0  2938.0  3548.0  6255.0        0   \n",
+       "3     3756.0  6225.0  2417.0  2600.0  2869.0  2961.0  3637.0  6106.0        0   \n",
+       "4     5675.0  8072.0  3759.0  4106.0  4576.0  4867.0  5551.0  7948.0        0   \n",
+       "...      ...     ...     ...     ...     ...     ...     ...     ...      ...   \n",
+       "3717     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0        0   \n",
+       "3718     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0        0   \n",
+       "3719     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0        0   \n",
+       "3720  6888.0  7125.0  6672.0  7930.0  8938.0  9094.0  9315.0  9552.0        0   \n",
+       "3721     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0        0   \n",
        "\n",
-       "YEAR  M2050ADJ  ADJ2023  ADJ2028  ADJ2032  ADJ2042  ADJ2050  \n",
-       "0       2391.0        0        0        0        0        0  \n",
-       "1       6213.0        0        0        0        0        0  \n",
-       "2       6255.0        0        0        0        0        0  \n",
-       "3       6106.0        0        0        0        0        0  \n",
-       "4       7948.0        0        0        0        0        0  \n",
-       "...        ...      ...      ...      ...      ...      ...  \n",
-       "3717       0.0        0        0        0        0        0  \n",
-       "3718       0.0        0        0        0        0        0  \n",
-       "3719       0.0        0        0        0        0        0  \n",
-       "3720    9552.0        0        0        0        0        0  \n",
-       "3721       0.0        0        0        0        0        0  \n",
+       "YEAR  ADJ2028  ADJ2032  ADJ2042  ADJ2050  \n",
+       "0           0        0        0        0  \n",
+       "1           0        0        0        0  \n",
+       "2           0        0        0        0  \n",
+       "3           0        0        0        0  \n",
+       "4           0        0        0        0  \n",
+       "...       ...      ...      ...      ...  \n",
+       "3717        0        0        0        0  \n",
+       "3718        0        0        0        0  \n",
+       "3719        0        0        0        0  \n",
+       "3720        0        0        0        0  \n",
+       "3721        0        0        0        0  \n",
        "\n",
        "[3722 rows x 20 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read in intermediate data\n",
-    "dfModVolAdj = pd.read_csv('intermediate/model-volumes-adjusted.csv')\n",
+    "dfModVolAdj = pd.read_csv('intermediate/model-forecasts.csv')\n",
     "dfModVolAdj['YEAR'] = dfModVolAdj['YEAR'].astype(str)\n",
     "dfModVolAdj['YEAR'] = 'M' + dfModVolAdj['YEAR']\n",
     "\n",
     "dfModVolAdj_pvModAadt = dfModVolAdj.pivot_table(index=['SEGID','FAC_WDAVG','aadtAdjFactor'], columns='YEAR', values='modAADT')\n",
     "dfModVolAdj_pvModAadt.reset_index(inplace=True)\n",
     "\n",
-    "dfModVolAdj = pd.read_csv('intermediate/model-volumes-adjusted.csv')\n",
+    "dfModVolAdj = pd.read_csv('intermediate/model-forecasts.csv')\n",
     "dfModVolAdj['YEAR'] = dfModVolAdj['YEAR'].astype(str)\n",
-    "dfModVolAdj['YEAR'] = 'M' + dfModVolAdj['YEAR'] + 'ADJ'\n",
+    "dfModVolAdj['YEAR'] = 'MF' + dfModVolAdj['YEAR']\n",
     "\n",
-    "dfModVolAdj_pvModAadtAdj = dfModVolAdj.pivot_table(index=['SEGID','FAC_WDAVG','aadtAdjFactor'], columns='YEAR', values='modAADTadj')\n",
+    "dfModVolAdj_pvModAadtAdj = dfModVolAdj.pivot_table(index=['SEGID','FAC_WDAVG','aadtAdjFactor'], columns='YEAR', values='modForecast')\n",
     "dfModVolAdj_pvModAadtAdj.reset_index(inplace=True)\n",
     "\n",
     "dfModVolAdj = pd.DataFrame.merge(dfModVolAdj_pvModAadt, dfModVolAdj_pvModAadtAdj, on=('SEGID','FAC_WDAVG','aadtAdjFactor'))\n",
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "'e:\\\\GitHub\\\\Traffic-Volume-Forecasts\\\\_site\\\\data\\\\ForecastSegments.shp'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,17 +551,17 @@
     "sdfSegmentsWData.fillna(0,inplace=True)\n",
     "\n",
     "# export\n",
-    "sdfSegmentsWData.spatial.to_featureclass('_site/data/ForecastSegments.shp')"
+    "sdfSegmentsWData.spatial.to_featureclass('_site/data/ForecastSegments.shp',sanitize_columns=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert csvs to jsons\n",
-    "lstSegidFiles = ['aadt', 'linear-forecasts', 'model-volumes-adjusted', 'previous-forecasts']\n",
+    "lstSegidFiles = ['aadt', 'linear-forecasts', 'model-forecasts', 'previous-forecasts']\n",
     "lstNonSegidFiles = ['aadt-sources', 'previous-forecasts-sources', 'projection-groups']\n",
     "\n",
     "for file in lstSegidFiles + lstNonSegidFiles:\n",
