--- a/3-Prepare-Model-Forecasts.ipynb
+++ b/3-Prepare-Model-Forecasts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "[340 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "[159926 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to round based on the given ranges\n",
+    "def custom_rounding(value):\n",
+    "    if 0 <= value < 100:\n",
+    "        return round(value / 10) * 10\n",
+    "    elif 100 <= value < 1000:\n",
+    "        return round(value / 50) * 50\n",
+    "    elif 1000 <= value < 10000:\n",
+    "        return round(value / 100) * 100\n",
+    "    elif 10000 <= value < 100000:\n",
+    "        return round(value / 500) * 500\n",
+    "    elif value >= 100000:\n",
+    "        return round(value / 1000) * 1000\n",
+    "    else:\n",
+    "        return value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1240,7 @@
        "      <td>0.9840</td>\n",
        "      <td>1535</td>\n",
        "      <td>-18.0</td>\n",
-       "      <td>1517.0</td>\n",
+       "      <td>1500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1228,7 +1250,7 @@
        "      <td>0.9840</td>\n",
        "      <td>1585</td>\n",
        "      <td>856.0</td>\n",
-       "      <td>2441.0</td>\n",
+       "      <td>2400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1238,7 +1260,7 @@
        "      <td>0.9840</td>\n",
        "      <td>1784</td>\n",
        "      <td>657.0</td>\n",
-       "      <td>2441.0</td>\n",
+       "      <td>2400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1248,7 +1270,7 @@
        "      <td>0.9840</td>\n",
        "      <td>2536</td>\n",
        "      <td>-119.0</td>\n",
-       "      <td>2417.0</td>\n",
+       "      <td>2400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1258,7 +1280,7 @@
        "      <td>0.9593</td>\n",
        "      <td>3883</td>\n",
        "      <td>-124.0</td>\n",
-       "      <td>3759.0</td>\n",
+       "      <td>3800.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1288,7 +1310,7 @@
        "      <td>1.0924</td>\n",
        "      <td>7125</td>\n",
        "      <td>2427.0</td>\n",
-       "      <td>9552.0</td>\n",
+       "      <td>9600.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23076</th>\n",
@@ -1340,14 +1362,14 @@
        "23078   WFRC_8266   8362.2  2050     0.0000        0            0.0   \n",
        "\n",
        "       modForecast  \n",
-       "0           1517.0  \n",
-       "1           2441.0  \n",
-       "2           2441.0  \n",
-       "3           2417.0  \n",
-       "4           3759.0  \n",
+       "0           1500.0  \n",
+       "1           2400.0  \n",
+       "2           2400.0  \n",
+       "3           2400.0  \n",
+       "4           3800.0  \n",
        "...            ...  \n",
        "23074          0.0  \n",
-       "23075       9552.0  \n",
+       "23075       9600.0  \n",
        "23076          NaN  \n",
        "23077          NaN  \n",
        "23078          0.0  \n",
@@ -1355,7 +1377,7 @@
        "[23079 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,13 +1386,14 @@
     "# ADJUST ALL MODEL VOLUMES BASED ON BASE YEAR ADJ FACTOR\n",
     "\n",
     "dfModWithAdj = pd.DataFrame.merge(dfModAadt, dfModAdjFactor, on='SEGID', how='left')\n",
-    "dfModWithAdj['modForecast'] = dfModWithAdj['modAADT'] + dfModWithAdj['aadtAdjFactor']\n",
+    "dfModWithAdj['modForecast'] = (dfModWithAdj['modAADT'] + dfModWithAdj['aadtAdjFactor']).apply(custom_rounding)\n",
+    "\n",
     "dfModWithAdj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1407,69 +1430,170 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1096</th>\n",
-       "      <td>0202_001.5</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1510.7</td>\n",
        "      <td>2019</td>\n",
        "      <td>0.9840</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>884</td>\n",
-       "      <td>-884.0</td>\n",
+       "      <td>1535</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>1517</td>\n",
+       "      <td>-17.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1786</th>\n",
-       "      <td>2082_005.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>0006_149.9</td>\n",
+       "      <td>1559.7</td>\n",
        "      <td>2019</td>\n",
-       "      <td>1.0918</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9697</td>\n",
-       "      <td>-9697.0</td>\n",
+       "      <td>0.9840</td>\n",
+       "      <td>1585</td>\n",
+       "      <td>856.0</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>2441</td>\n",
+       "      <td>-41.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2562</th>\n",
-       "      <td>2372_000.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>0006_150.6</td>\n",
+       "      <td>1755.8</td>\n",
        "      <td>2019</td>\n",
-       "      <td>1.0946</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4123</td>\n",
-       "      <td>-4123.0</td>\n",
+       "      <td>0.9840</td>\n",
+       "      <td>1784</td>\n",
+       "      <td>657.0</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>2441</td>\n",
+       "      <td>-41.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2956</th>\n",
-       "      <td>2964_003.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>0006_152.6</td>\n",
+       "      <td>2495.6</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.9840</td>\n",
+       "      <td>2536</td>\n",
+       "      <td>-119.0</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>2417</td>\n",
+       "      <td>-17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0006_152.9</td>\n",
+       "      <td>3725.4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.9593</td>\n",
+       "      <td>3883</td>\n",
+       "      <td>-124.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>3759</td>\n",
+       "      <td>41.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3502</th>\n",
+       "      <td>WFRC_8004</td>\n",
+       "      <td>5013.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>1.0924</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4588</td>\n",
+       "      <td>2084.0</td>\n",
+       "      <td>6700.0</td>\n",
+       "      <td>6672</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3504</th>\n",
+       "      <td>WFRC_8221</td>\n",
+       "      <td>812.5</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0946</td>\n",
+       "      <td>742</td>\n",
+       "      <td>-739.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3505</th>\n",
+       "      <td>WFRC_8222</td>\n",
+       "      <td>1639.8</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0946</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>-1495.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5257</td>\n",
-       "      <td>-5257.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3506</th>\n",
+       "      <td>WFRC_8223</td>\n",
+       "      <td>3050.0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0946</td>\n",
+       "      <td>2786</td>\n",
+       "      <td>-2783.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3507</th>\n",
+       "      <td>WFRC_8263</td>\n",
+       "      <td>4638.1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0924</td>\n",
+       "      <td>4245</td>\n",
+       "      <td>2427.0</td>\n",
+       "      <td>6700.0</td>\n",
+       "      <td>6672</td>\n",
+       "      <td>28.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3254 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "           SEGID  DY_VOL  YEAR  FAC_WDAVG  modAADT  aadtAdjFactor  \\\n",
-       "1096  0202_001.5     0.0  2019     0.9840        0            0.0   \n",
-       "1786  2082_005.0     0.0  2019     1.0918        0            0.0   \n",
-       "2562  2372_000.0     0.0  2019     1.0946        0            0.0   \n",
-       "2956  2964_003.0     0.0  2019     1.0924        0            0.0   \n",
+       "0     0006_146.9  1510.7  2019     0.9840     1535          -18.0   \n",
+       "1     0006_149.9  1559.7  2019     0.9840     1585          856.0   \n",
+       "2     0006_150.6  1755.8  2019     0.9840     1784          657.0   \n",
+       "3     0006_152.6  2495.6  2019     0.9840     2536         -119.0   \n",
+       "4     0006_152.9  3725.4  2019     0.9593     3883         -124.0   \n",
+       "...          ...     ...   ...        ...      ...            ...   \n",
+       "3502   WFRC_8004  5013.0  2019     1.0924     4588         2084.0   \n",
+       "3504   WFRC_8221   812.5  2019     1.0946      742         -739.0   \n",
+       "3505   WFRC_8222  1639.8  2019     1.0946     1498        -1495.0   \n",
+       "3506   WFRC_8223  3050.0  2019     1.0946     2786        -2783.0   \n",
+       "3507   WFRC_8263  4638.1  2019     1.0924     4245         2427.0   \n",
        "\n",
        "      modForecast  obsAADT  ModVsObs  \n",
-       "1096          0.0      884    -884.0  \n",
-       "1786          0.0     9697   -9697.0  \n",
-       "2562          0.0     4123   -4123.0  \n",
-       "2956          0.0     5257   -5257.0  "
+       "0          1500.0     1517     -17.0  \n",
+       "1          2400.0     2441     -41.0  \n",
+       "2          2400.0     2441     -41.0  \n",
+       "3          2400.0     2417     -17.0  \n",
+       "4          3800.0     3759      41.0  \n",
+       "...           ...      ...       ...  \n",
+       "3502       6700.0     6672      28.0  \n",
+       "3504          0.0        3      -3.0  \n",
+       "3505          0.0        3      -3.0  \n",
+       "3506          0.0        3      -3.0  \n",
+       "3507       6700.0     6672      28.0  \n",
+       "\n",
+       "[3254 rows x 9 columns]"
       ]
      },
      "metadata": {},
@@ -1491,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
